feat(house): init logic of house
