# pkg/httpRouter/gin-router.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"net/http"
 
+	"github.com/PatrickChagastavares/game-of-thrones/internal/entities"
 	"github.com/PatrickChagastavares/game-of-thrones/pkg/validator"
 	"github.com/gin-gonic/gin"
 )
@@ -70,8 +71,22 @@ func (c *ginContext) JSON(statusCode int, data any) {
 	c.r.JSON(statusCode, data)
 }
 
+func (c *ginContext) JSONError(err error) {
+	switch e := err.(type) {
+	case *entities.HttpErr:
+		c.JSON(e.HTTPCode, err)
+		return
+	default:
+		c.JSON(http.StatusInternalServerError, err)
+	}
+}
+
 func (c *ginContext) Decode(data any) error {
 	return c.r.Bind(&data)
+}
+
+func (c *ginContext) GetQuery(query string) string {
+	return c.r.Query(query)
 }
 
 func (c *ginContext) GetResponseWriter() http.ResponseWriter {
